add saving generated data

--- a/UR3_Inverse_Problem_Single_Solution_Brach.ipynb
+++ b/UR3_Inverse_Problem_Single_Solution_Brach.ipynb
@@ -489,9 +489,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eS1slMgbHYFL",
-        "outputId": "80c24264-c64d-458e-d056-f847cb3ba8a3"
+        "outputId": "b8c221f5-5768-4995-fbcb-dec76018f35e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,8 +564,144 @@
       "metadata": {
         "id": "5U_sVAvHJisx"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "39fa17e7",
+        "outputId": "b3eb05d7-dad5-422f-90c1-32f14c223372"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import scipy.io\n",
+        "\n",
+        "# Convert tensors to numpy arrays for saving\n",
+        "X_norm_np = X_norm.numpy()\n",
+        "y_sc_np = y_sc.numpy()\n",
+        "mean_np = mean.numpy()\n",
+        "std_np = std.numpy()\n",
+        "\n",
+        "# Save normalized input data to CSV\n",
+        "pd.DataFrame(X_norm_np).to_csv('normalized_poses.csv', index=False)\n",
+        "print(\"Normalized poses saved to 'normalized_poses.csv'\")\n",
+        "\n",
+        "# Save encoded joint angles to CSV\n",
+        "pd.DataFrame(y_sc_np).to_csv('encoded_joints.csv', index=False)\n",
+        "print(\"Encoded joints saved to 'encoded_joints.csv'\")\n",
+        "\n",
+        "# # Save normalization parameters (mean and std) to CSV\n",
+        "# pd.DataFrame({'mean': mean_np, 'std': std_np}).to_csv('normalization_params.csv', index=False)\n",
+        "# print(\"Normalization parameters saved to 'normalization_params.csv'\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normalized poses saved to 'normalized_poses.csv'\n",
+            "Encoded joints saved to 'encoded_joints.csv'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fa7434d6",
+        "outputId": "526dceac-80ce-45ff-d0fb-59a61633fefa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import scipy.io\n",
+        "\n",
+        "# Save raw poses to CSV\n",
+        "pd.DataFrame(poses).to_csv('raw_poses.csv', index=False)\n",
+        "print(\"Raw poses saved to 'raw_poses.csv'\")\n",
+        "\n",
+        "# Save raw joints to CSV\n",
+        "pd.DataFrame(joints).to_csv('raw_joints.csv', index=False)\n",
+        "print(\"Raw joints saved to 'raw_joints.csv'\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Raw poses saved to 'raw_poses.csv'\n",
+            "Raw joints saved to 'raw_joints.csv'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "42a80077",
+        "outputId": "2071803b-a147-4999-cef9-28b7d16dbb6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Save raw poses and joints to a MAT file\n",
+        "mat_data_raw = {\n",
+        "    'raw_poses': poses,\n",
+        "    'raw_joints': joints\n",
+        "}\n",
+        "scipy.io.savemat('raw_ik_data.mat', mat_data_raw)\n",
+        "print(\"Raw IK data saved to 'raw_ik_data.mat'\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Raw IK data saved to 'raw_ik_data.mat'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "25a3066c",
+        "outputId": "310f6cd3-338b-491b-c409-5a1f3878a080"
+      },
+      "source": [
+        "# Save all relevant normalized data to a MAT file\n",
+        "mat_data = {\n",
+        "    'normalized_poses': X_norm_np,\n",
+        "    'encoded_joints': y_sc_np,\n",
+        "    'mean': mean_np,\n",
+        "    'std': std_np\n",
+        "}\n",
+        "scipy.io.savemat('normalized_ik_data.mat', mat_data)\n",
+        "print(\"Normalized IK data saved to 'normalized_ik_data.mat'\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normalized IK data saved to 'normalized_ik_data.mat'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
